continued working on styles css. Fixed issue with white space between columns

--- a/webpack/src/styles.css
+++ b/webpack/src/styles.css
@@ -103,21 +103,42 @@ input {
 .form-container {
   display: flex;
   flex-direction: column;
+  /* margin-right: 10px; */
+  box-shadow: 3px 0px 5px 0px var(--Blue2);
+  position: relative;
 }
 
 /* PROJECT CONTAINER CSS */
 .project-task-container {
-  display: grid;
+  background-color: var(--Blue4);
+  /* display: grid; */
+  /* grid-template-rows: masonry; */
+  /* grid-template-columns: repeat(auto-fit, minmax(200px)); */
   /* grid-template-columns: repeat(auto-fit, minmax(200px, 2fr)); */
-  grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
+  /* grid-template-columns: repeat(auto-fit, minmax(200px, max-content)); */
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
+  max-height: 1000px;
+  /* width: 100%; */
+  /* align-self: flex-start; */
+  /* justify-content: center; */
+  /* row-gap: 10px; */
+  /* column-gap: 10px; */
+  align-content: flex-start;
 }
 
 /* PROJECT CARD CSS */
 .project-card {
-  border-style: dashed;
+  /* box-shadow: 2px 2px 2px aliceblue; */
+  border: 5px solid aliceblue;
+  border-radius: 5px;
   width: 200px;
-  max-width: 100%;
-  height: fit-content;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  /* max-width: 100; */
+  /* height: fit-content; */
 }
